killercoda/cka/chadd-crowell/27-logging-k8s.yaml
cat << EOF > pod-logging.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-logging
spec:
  containers:
  - name: main
    image: busybox
    args: ["sh", "-c", "while true; do echo $(date); sleep 1; done"]
EOF

k apply -f pod-logging.yaml 
k logs pod-logging -f

k apply -f- << EOF
apiVersion: v1
kind: Pod
metadata:
  name: pod-logging-sidecar
spec:
  containers:
  - image: busybox
    name: main
    args: [ 'sh', '-c', 'while true; do echo "$(date)\n" >> /var/log/main-container.log; sleep 5; done' ]
    volumeMounts:
      - name: varlog
        mountPath: /var/log
  - name: sidecar
    image: busybox
    args: [ /bin/sh, -c, 'tail -f /var/log/main-container.log' ]
    volumeMounts:
      - name: varlog
        mountPath: /var/log
  volumes:
    - name: varlog
      emptyDir: {}
EOF

k logs pod-logging-sidecar -c sidecar -f
k logs pod-logging-sidecar --all-containers=true -f


k create deployment mysql --image=mysql:8
k get deploy
k logs mysql-88976bf6-dksk2
k edit deployments.apps mysql 

spec:
  containers:
  - env:
    - name: MYSQL_RANDOM_ROOT_PASSWORD
      value: "true"

k get po
