killercoda/cka/chadd-crowell/9-priority-class.yaml
k get pc
k create priorityclass high-priority --value=1000000

k create deployment low-prio --replicas=3 --image=polinux/stress -o yaml --dry-run=client -- stress > deploy.yaml
vim deploy.yaml 

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: low-prio
  name: low-prio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: low-prio
  strategy: {}
  template:
    metadata:
      labels:
        app: low-prio
    spec:
      containers:
      - command: ["stress"]
        args: ["--vm", "1", "--vm-bytes", "400M", "--timeout", "600s"]
        image: polinux/stress
        name: stress
      resources:
        requests:
          memory: "500Mi"
          cpu: "100m"

k get deployments.apps low-prio
k get po 

k apply -f- <<EOF
apiVersion: v1
kind: Pod
metadata:
  name: high-prio
  labels:
    app: high-prio
spec:
  containers:
  - name: stress
    image: polinux/stress
    command: ["stress"]
    args:
      - "--cpu"
      - "1"
      - "--vm"
      - "1"
      - "--vm-bytes"
      - "512M"
      - "--timeout"
      - "300s"
    resources:
      requests:
        memory: "600Mi"
        cpu: "200m"
  priorityClassName: high-priority
EOF

k get pod

k get pod --watch
