killercoda/cka/chadd-crowell/6-create-gw-and-https-route.yaml
k get crds | grep -i gateway

k get gatewayclass nginx -o yaml

k apply -f- << EOF
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
EOF


k get gateway my-gateway -o yaml

k create deployment web --image=nginx --port=80
k get deployments.apps web -o yaml

k expose deployment web --port=80
k get svc web -o yaml
k describe svc web | grep -i endpoints

k apply -f- << EOF
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-route
  namespace: default
spec:
  parentRefs:
  - name: my-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: web
      port: 80
EOF

k get httproute web-route -o yaml
